src/tests/errors/lexing/test10.cmp
program main 
begin
   var x := 20a   (* 20a is neither a literal nor an identifier *)
end 